[package]
name = "launchpad"
version = "0.1.0"
edition = "2021"
description = "iOS TestFlight deployment made easy"
license = "MIT"
repository = "https://github.com/hasankhalid/launchpad"
keywords = ["ios", "testflight", "deploy", "fastlane"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
which = "6"
thiserror = "1"
shellexpand = "3"
dirs = "5"
regex-lite = "0.1"

[[bin]]
name = "launchpad"
path = "src/main.rs"
